--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body class="quicksand">
     <header>
-        <h2>SCHOOL</h2>
+        <h2>School</h2>
+        <h3>Again</h3>
     </header>
     <main>
 
