banner responsive std crclm

--- a/index.html
+++ b/index.html
@@ -1,21 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body class="quicksand">
     <header>
-        <h2>School</h2>
-        <h3>Again</h3>
+        <nav>
+            <div class="logo">
+                <img src="assets/logo.png" alt="">
+                <h2>SCHOOL</h2>
+            </div>
+            <ul>
+                <li class="Home">Home</li>
+                <li class="About">About</li>
+                <li class="Facilities">Facilities</li>
+                <li class="Admission">Admission</li>
+            </ul>
+            <button class="btn-contact">Contact</button>
+            <div class="ham-barg">
+                <img src="assets/Hamburger_icon.svg.png" alt="">
+            </div>
+        </nav>
+
+        <section class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title"><span class="orange">Empowering</span><br>
+                    students from small age <span class="blue"> towards vision</span></h1>
+                <p class="banner-dscrp">With the courage, Confidence, Creativity and Compassion to make their Unique
+                    Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn-2" type="button">Enroll Now</button>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+        </section>
+
     </header>
     <main>
+        <section class="Standard-Curriculum">
+
+            <h2 class="section-title">Standard Curriculum</h2>
+
+            <div class="curriculam-container">
+                <div class="curriculam-card grad-blue">
+                    <img src="assets/kinder.png" alt="">
+                    <h4>Kinder (3-6) Years</h4>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h5 class="blue">Read more</h5>
+                </div>
+                <div class="curriculam-card grad-yellow">
+                    <img src="assets/elementary.png" alt="">
+                    <h4>Elementary School</h4>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h5 class="orange">Read more</h5>
+                </div>
+                <div class="curriculam-card grad-megenta">
+                    <img src="assets/middle.png" alt="">
+                    <h4>Middle (10-16) Years</h4>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h5 class="magenta">Read more</h5>
+                </div>
+            </div>
+            <div class="btn-container">
+                <button class="circle-button">&#x2039;</button>
+                <button class="circle-button">&#x203A;</button>
+            </div>
+        </section>
 
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
