--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
             <div class="banner-content">
                 <h1 class="banner-title"><span class="orange">Empowering</span><br>
                     students from small age <span class="blue"> towards vision</span></h1>
-                <p class="banner-dscrp">With the courage, Confidence, Creativity and Compassion to make their Unique
-                    Contribution in a Diverse and Dynamic World.</p>
+                <p class="banner-dscrp"> <marquee  direction="up" height="60px"> With the courage, confidence, creativity, and compassion to make their unique contribution in a diverse and dynamic world,
+                    They rise with purpose, embracing every challenge as a chance to grow.
+                    Their voices carry the strength of vision and the warmth of empathy.
+                    They celebrate differences, knowing unity is found in diversity.
+                    Innovative in thought and kind in action, they shape a better tomorrow.
+                    Each step they take is a reflection of their bold spirit and boundless potential. </marquee> </p>
                 <button class="btn-2" type="button">Enroll Now</button>
             </div>
             <div class="banner-img">
@@ -78,9 +82,86 @@
             </div>
         </section>
 
+        <section class="Our-Stories">
+            <h2 class="section-title">Our Stories</h2>
+            <div class="story-container">
+                <div class="big-story">
+                    <img src="assets/story-1.png" alt="">
+                    <div class="story-content">
+                        <div class="story-date">November 19, 2019</div>
+                        <h4 class="story-title">A fun toddler coloring training on
+                            classroom</h4>
+                        <p class="story-dscp">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                    </div>
+                </div>
+                <div class="small-stoy">
+                    <small-stories>
+                        <img src="assets/story-2.png" alt="">
+                        <div class="story-content">
+                            <div class="story-date">November 19, 2019</div>
+                            <h4 class="story-title">Find out if a school fits the
+                                family’s needs</h4>
+                        </div>
+                    </small-stories>
+                    <small-stories>
+                        <img src="assets/story-3.png" alt="">
+                        <div class="story-content">
+                            <div class="story-date">November 19, 2019</div>
+                            <h4 class="story-title">Summer math & literacy
+                                centres for kids</h4>
+                        </div>
+                    </small-stories>
+                    <small-stories>
+                        <img src="assets/story-4.png" alt="">
+                        <div class="story-content">
+                            <div class="story-date">November 19, 2019</div>
+                            <h4 class="story-title">Classroom management
+                                techniques for new tutors</h4>
+                        </div>
+                    </small-stories>
+                    <small-stories>
+                        <img src="assets/story-5.png" alt="">
+                        <div class="story-content">
+                            <div class="story-date">November 19, 2019</div>
+                            <h4 class="story-title">Conversation rhymes
+                                improve kids listening</h4>
+                        </div>
+                    </small-stories>
+                </div>
+            </div>
+            <div style="text-align: center;">
+                <button class="btn-2">View All</button>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="company">
+            <div class="white-logo">
+                <img src="assets/Vector.png" alt="">
+                <h2>Kids <br>Education</h2>
+            </div>
+            <p class="company-dscrp">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+        </div>
+        <div class="about">
+            <h4>About School</h4>
+            <ul class="about-list">
+                <li>Home</li>
+                <li>About</li>
+                <li>Facilities</li>
+                <li>Admission</li>
+            </ul>
+        </div>
+        <div class="social-media">
+            <h4>Keep In Touch</h4>
+            <div class="social-media-icon">
+                <img src="assets/fb.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/twitter.png" alt="">
+                <img src="assets/google+.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 
